from enum import Enum


class FuncaoJogador(Enum):

    ENTRY = "ENTRY"
    SUPPORT = "SUPPORT"
    AWP = "AWP"
    IGL = "IGL"
    LURKER = "LURKER"