from enum import Enum


class TipoTorneio(Enum):

    PONTOS_CORRIDOS = "PONTOS_CORRIDOS"
    ELIMINACAO_SIMPLES = "ELIMINACAO_SIMPLES"